@@ -95,8 +95,9 @@ PRADO component tags when you use it to edit PRADO templates.
 
 <h3>Translations</h3>
 <ul>
-<li>Indonesian: <a href="mailto:zaenalm@gmail.com">Zaenal Mutaqin</a></li>
+<li>Indonesian: Zaenal Mutaqin</li>
 <li>French: Eric Marchetti</li>
+<li>Japanese: Yoshinari Ueyama, Shinya Kawamura, Tsuchimoto Hiroki</li>
 </ul>
 
 <h3>Prado v2 Maintenance Team</h3>
