@@ -9,6 +9,7 @@ BUG: Ticket#662 - Ensure TForm to properly encode the ampersand in action URL (Q
 BUG: Ticket#666 - TActiveRecord::deleteAll() method always requires a criteria or null parameter (Qiang)
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
 BUG: Ticket#689 - TRangeValidator: Problem in clientscript when MaxValue=<%= 0 %> (Qiang)
+ENH: Ticket#370 - TDataGrid now supports grouping cells (Qiang)
 ENH: Ticket#577 - Added image button support for TPager (Qiang)
 ENH: Ticket#623 - TMemCache to support multiple servers (Carl)
 ENH: Ticket#664 - Added support to styling thead, tbody, tfoot of TDataGrid (Qiang)
